# rust-axum-server

./: .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  compose.yaml  diesel.toml  sample.env  schema.sql  start-container-with-env.sh  start-dev-with-env.sh
.devcontainer/: devcontainer.json
.github/workflows/: api-smoke-test.yml  azure-deploys-stage.yml  azure_deploys.yml  scorecard.yml
data/: 20241115205802-github_user_profile_dfberry.json  20241115205816-github_query.json  20241115205825-github_query.json  20241115205932-github_repos_stats.json  20241115205938-github_repo_dfberry_azure-notes.json  postgresql.sql  test.json
docs/: build-errors.md  github-auth.md
http/: config.http  delete-user-watch.http  get-config.http  get-log.http  get-root.http  get-user-by-token.http  get-user-profile.http  github-query-issue-post.http  github-repo-issues-get.http  github-repo-prs-get.http  github-repos-stats-post.http  github-user-post.http  github-user-rate-limit-get.http  github-user-token-get.http  github-user-username-get.http  issue-query.http  list-user.http  list-watches.http  new-user.http  new-watch.http  post-generate-id.http  post-new-watch.http  repo-stats.http  repo.http  repo.sh  test-write.http  user-db-user-get.http  user-db-user-watches-get.http  user-db-users-watches-get.http  user-github_user_id-watch-post.http  user-post.http  users-get.http
http/database/: list-user.http  list-watches.http  new-user.http  new-watch.http  user-db-user-watches-get.http
migrations/2024-08-23-211328_create_users/: up.sql
migrations/2024-08-24-130635_create_users/: down.sql  up.sql
migrations/2024-08-24-130752_create_watches/: down.sql  up.sql
scripts/: check-revision.sh  create-resources.sh  create-sp-for-github-secret.sh  create-sp.sh  create-stage-container-app.sh  delete-secrets.sh  get-ingress-url.sh  ingress.sh  set-1-secret.sh  set-secrets-stage.sh  set-secrets.sh
src/: config.rs  database.rs  github.rs  main.rs  schema.rs
src/config/: config.rs  state.rs
src/database/: database.rs  mod.rs  page.rs  user.rs  user_session.rs  user_token.rs  watch.rs
src/github/: mod.rs
src/io/: mod.rs
src/mongo_database/: crud.rs  log.rs  mod.rs  models.rs
src/routes/: generate.rs  github.rs  log.rs  log.txt  mod.rs  root.rs  user.rs  user_auth_session.rs  user_auth_token.rs  user_watch.rs
src/routes/admin/: mod.rs
src/state/: mod.rs
src/utils/: generate.rs  mod.rs  orgrepo.rs
tests/: jest.config.js  package-lock.json  package.json  tsconfig.json
tests/src/__tests__/: config.spec.ts  fail-on-purpose.ts  issue-query.spec.ts  repo-stats.spec.ts  repo.spec.ts  user.spec.ts  user_watches.spec.ts
