[package]
name = "source-board-server"
version = "0.3.3"
edition = "2021"
publish = false

[dependencies]
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
tokio = { version = "1.39.3", features = ["full"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
serde_derive = "1.0.209"
tower-http = { version = "0.6.1", features = ["cors"] }
uuid = { version = "1.10.0", features = ["v4","serde"] }
urlencoding = "2.1.3"
octocrab = "0.41.0"
http = "1.1.0"
http-serde-ext = "1.0.2"
tower = "0.5.0"
anyhow = "1.0.86" 
toml = "0.8.19"
url = "2.5.2"
chrono = "0.4.38"
diesel = { version = "2.2.3", features = ["postgres", "chrono"] }
pq-sys = "0.6.1"
reqwest = "0.12.7"
futures = "0.3.30"

[[bin]]
name = "source-board-server"
path = "src/main.rs"
