[package]
name = "source-board-server"
version = "0.4.2"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86" 
axum = { version = "0.7.5" }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
chrono = "0.4.38"
diesel = { version = "2.2.3", features = ["postgres", "chrono"] }
futures = "0.3.30"
http = "1.1.0"
http-body-util = "0.1.0"
http-serde-ext = "1.0.2"
hyper = "1.0.0"
octocrab = "0.41.0"
pq-sys = "0.6.1"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.208", features = ["derive"] }
serde_derive = "1.0.209"
serde_json = "1.0.127"
tokio = { version = "1.39.3", features = ["full"] }
toml = "0.8.19"
tower = "0.5.0"
tower-http = { version = "0.6.1", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.2"
urlencoding = "2.1.3"
uuid = { version = "1.10.0", features = ["v4","serde"] }


[[bin]]
name = "source-board-server"
path = "src/main.rs"
