[package]
name = "source-board-server"
version = "0.5.10"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.86" 
axum = { version = "0.7.5", features = ["macros"] }
axum-extra = { version = "0.9.3", features = ["typed-header"] }
bson = "2.13.0"
chrono = "0.4.39"
diesel = { version = "2.2.3", features = ["postgres", "chrono"] }
futures = "0.3.31"
http = "1.1.0"
http-body-util = "0.1.0"
http-serde-ext = "1.0.2"
hyper = "1.0.0"
mongodb = "3.2.0"
octocrab = "0.41.0"
pq-sys = "0.6.1"
rand = "0.8"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.127"
serde_json = "1.0.137"
tokio = { version = "1.43.0", features = ["full"] }
toml = "0.8.19"
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5.4"
urlencoding = "2.1.3"
uuid = { version = "1.12.1", features = ["v4","serde"] }

[[bin]]
name = "source-board-server"
path = "src/main.rs"
